brat/test/golden/error/simpleterm.brat.golden
Error in test/golden/error/simpleterm.brat@2:10-14
simple = true
         ^^^^

  "true" is not a valid constructor for type Nat

